--- a/ScriptEditor/Info.plist
+++ b/ScriptEditor/Info.plist
@@ -38,7 +38,7 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>kt</string>
+					<string>kts</string>
 					<string>swift</string>
 				</array>
 			</dict>
